Create get product by id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=jocommerce
 
 server.servlet.context-path=/api/v1/
+server.error.include-stacktrace=on-param
 
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
