--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,21 @@
+
+# Project Configuration
 spring.application.name=jocommerce
 
+# Server
 server.servlet.context-path=/api/v1/
 server.error.include-stacktrace=on-param
 
+# Profile
 spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
-# cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
+# Vars
+security.client-id=${CLIENT_ID:myclientid}
+security.client-secret=${CLIENT_SECRET:myclientsecret}
+
+# JWT token duration in seconds
+security.jwt.duration=${JWT_DURATION:86400}
+
+#Cors configuration
+cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
